Add getStatesByCountry function in StatesController and tests for that
