# resources/swagger/openapi.json
@@ -1340,7 +1340,7 @@
     },
     "/api/states/{id}": {
       "get": {
-        "summary": "Get the state by id",
+        "summary": "Get the information of a specific state by its id.",
         "tags": ["States"],
         "parameters": [
           {
@@ -1432,6 +1432,70 @@
           },
           "404": {
             "description": "The state was not found"
+          }
+        }
+      }
+    },
+    "/api/states_country/{id}":{
+      "get": {
+        "summary": "Lists all the States",
+        "tags": ["States"],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "The state id"
+          },
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer"
+            },
+            "description": "The page"
+          },
+          {
+            "in": "query",
+            "name": "per_page",
+            "schema": {
+              "type": "integer"
+            },
+            "description": "The quantity of results per page"
+          },
+          {
+            "in": "query",
+            "name": "sort_by",
+            "schema": {
+              "type": "string"
+            },
+            "description": "The field by sort"
+          },
+          {
+            "in": "query",
+            "name": "order",
+            "schema": {
+              "type": "string"
+            },
+            "description": "The direction of the sort"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The list of the States filtered by country_id",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/States"
+                  }
+                }
+              }
+            }
           }
         }
       }
